--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.22.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
@@ -45,6 +46,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "clean-webpack-plugin": "^4.0.0"
+    "normalize.css": "^8.0.1"
   }
 }
