--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "browserslist": "> 0.25%, not dead",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --port 4201 --open",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "repository": {
